--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="pagina">
         <header>
             <div id="UserMenuMobile">
-                <a href="pages/userProfile.html" id="userProfileHeader">
+                <a href="pages/userProfile.html" id="UserHeader">
                     <div class="UserPhotoHeader">
                         <img src="imagens/images/userIcons/Fenix.png" alt="">
                     </div>
@@ -22,10 +22,10 @@
                     <img src="imagens/images/logo/Twitter logo/PNG/2021 Twitter logo - blue.png" alt="">
                 </a>
             </div>
-            <div id="headerTittle">
+            <div id="headerTITULO">
                 <h2>Página Inicial</h2>
             </div>
-            <div id="search">
+            <div id="pesquisar">
                 <div id="searchBar">
                     <div id="searchBarIcon">
                         <img src="imagens/images/icons/Dark Theme/Search/Default.svg" alt="">
@@ -285,22 +285,22 @@
         <footer></footer>
         <nav id="navMobile">
             <a href="index.html" class="NavOptionMobile">
-                <div class="optionIconMobile">
+                <div class="OpçõesdeIcone">
                     <img src="images/icons/Dark Theme/Home/Selected.svg" alt="">
                 </div>
             </a>
             <a href="pages/explore.html" class="NavOptionMobile">
-                <div class="optionIconMobile">
+                <div class="OpçõesdeIcone">
                     <img src="images/icons/Dark Theme/Explore/Default.svg" alt="">
                 </div>
             </a>
             <a href="pages/notification.html" class="NavOptionMobile">
-                <div class="optionIconMobile">
+                <div class="OpçõesdeIcone">
                     <img src="images/icons/Dark Theme/Notifications/Default.svg" alt="">
                 </div>
             </a>
             <a href="pages/messages.html" class="NavOptionMobile">
-                <div class="optionIconMobile">
+                <div class="OpçõesdeIcone">
                     <img src="images/icons/Dark Theme/Messages/Default.svg" alt="">
                 </div>
             </a>
