--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </a>
                     <button>Tweetar</button>
                 </nav>
-            <a href="pages/userProfile.html" id="userProfileMenu">
+            <a href="#" id="userProfileMenu">
                 <div class="userInfoMenu">
                     <div class="UserPhotoMenu">
                         <img src="imagens/images/userIcons/amanda.png" alt="">
